# EasyWord

./: .gitignore  README.md  buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/easyword/: __main__.py  ai_service.py  app.py  consts.py  main.py
src/easyword.dist-info/: METADATA  top_level.txt
src/easyword/database/: manager.py  schema.py
src/easyword/ui/: add_word_dialog.py  bulk_import_view.py  create_library_view.py  edit_word_view.py  library_detail_view.py  library_screen.py  library_view.py  quiz_screen.py  quiz_view.py  search_screen.py  search_view.py  settings_screen.py  settings_view.py  study_screen.py  word_card.py
src/easyword/utils/: logger.py
tests/: test_ai_parsing.py
